# mas_vision_learn

./: CMakeLists.txt  main.cpp
armor_detector/: armor_detector.cpp  armor_detector.h  armor_types.h  number_classifier.cpp  number_classifier.h
config/: armor_detector.json  camera_set.json
hikcamera/include/: HikCamera.h
hikcamera/src/: HikCamera.cpp
thread/: armor_detector_thread.cpp  cam_thread.cpp
